[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"


[project]
name = "warplab"
version = "0.1.0"
description = "Scientific platform for spacetime simulation and warp metrics"
requires-python = ">=3.12"

dependencies = [
    "pyside6",
    "numpy",
    "scipy",
    "sympy",
    "einsteinpy",
    "pyvista",
    "vtk"
]


[project.scripts]
warplab = "warplab.main:main"


[tool.setuptools.packages.find]
where = ["src"]